--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 certifi==2024.8.30
+charset-normalizer==3.4.1
 click==8.1.7
 exceptiongroup==1.2.2
 fastapi==0.115.6
@@ -25,11 +26,13 @@ pydantic_core==2.27.1
 Pygments==2.18.0
 python-dotenv==1.0.1
 python-magic==0.4.27
+requests==2.32.3
 rich==13.9.4
 sniffio==1.3.1
 speedtest-cli==2.1.3
 starlette==0.41.3
 typing_extensions==4.12.2
 unicorn==2.1.1
+urllib3==2.3.0
 uvicorn==0.32.1
 websockets==14.1
